--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,30 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Launch A Special Program",
+            "program": "${workspaceRoot}/test/TaskConstructor.ts",
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Mocha Tests",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "-u",
+                "tdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceRoot}/dist/test"
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceRoot}/pool/Pool.ts",
             "outFiles": [
