--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "bignum": "*",
     "bitcoin-core": "^1.2.0",
     "bitcoinjs-lib": "^2.3.0",
+    "kafka-node": "^1.6.0",
+    "kinq": "UnsignedInt8/Kinq",
     "merkle-lib": "^2.0.10",
-    "node-multi-hashing": "unsignedInt8/node-multi-hashing",
-    "kinq": "UnsignedInt8/Kinq"
+    "node-multi-hashing": "unsignedInt8/node-multi-hashing"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
