Moved stratum code

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A mining pool",
   "main": "index.js",
   "bin": {
-    "rice-blocknotifier": "./dist/bin/BlockNotifier.js"
+    "rice-blocknotifier": "./dist/bin/BlockNotifier.js",
+    "rice-taskserver": "./dist/bin/TaskServer.js"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha ./dist/test/*.js --no-timeouts"
