--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "exclude": [
         ".vscode",
         "dist",
-        "node_modules"
+        "node_modules",
+        "node_modules/**/*.ts"
     ]
 }
