Fixed ipv6 parsing issue

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bitcoinjs-lib": "^2.3.0",
     "bunyan": "^1.8.10",
     "commander": "^2.9.0",
+    "ipaddr.js": "^1.3.0",
     "kafka-node": "^1.6.0",
     "kinq": "UnsignedInt8/Kinq",
     "node-multi-hashing": "UnsignedInt8/node-multi-hashing",
