--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rice",
+  "name": "js2pool",
   "version": "0.0.1",
-  "description": "A mining pool",
+  "description": "A decentralized mining pool",
   "main": "index.js",
   "bin": {
     "js2pool-blocknotifier": "./dist/bin/BlockNotifier.js"
@@ -15,7 +15,10 @@
   },
   "keywords": [
     "pool",
-    "mining"
+    "mining",
+    "p2pool",
+    "bitcoin",
+    "p2p"
   ],
   "author": "UnsignedInt8",
   "license": "GPL-3.0",
@@ -30,7 +33,6 @@
     "bitcoinjs-lib": "^2.3.0",
     "commander": "^2.9.0",
     "ipaddr.js": "^1.3.0",
-    "kafka-node": "^1.6.0",
     "kinq": "UnsignedInt8/Kinq",
     "node-multi-hashing": "UnsignedInt8/node-multi-hashing",
     "winston": "^2.3.1"
@@ -40,5 +42,8 @@
   },
   "engines": {
     "node": ">=6.0"
-  }
+  },
+  "contributors": [
+    "UnsignedInt8"
+  ]
 }
